examples/test/testpolicy18668.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18668
  namespace: namespace75
spec:
  podSelector:
    matchLabels:
      key16: value48
      key35: value9
      key42: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value14
          key39: value12
          key19: value14
